# ChainWhales

./: .gitignore  BitQuery.md  Diagram.md  README.md  RoadMap.md  STATUS.md  docker-compose.yml  package.json
algorithms/: README.md  pyproject.toml
algorithms/configs/: sample_config.yaml
algorithms/src/chainwhales_algo/: __init__.py  config.py  engine.py  filters.py  models.py  scoring.py
algorithms/src/chainwhales_algo/data_sources/: __init__.py  bitquery_client.py
algorithms/src/chainwhales_algo/examples/: __init__.py  run_loop.py  run_once.py
algorithms/src/chainwhales_algo/sinks/: internal_api.py
backend/: eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  main.ts
backend/src/alerts/: alerts.controller.ts  alerts.gateway.ts  alerts.module.ts  alerts.service.ts  internal-alerts.controller.ts
backend/src/auth/: auth.module.ts  auth.service.ts  clerk.guard.ts
backend/src/billing/: billing.controller.ts  billing.module.ts  billing.service.ts
backend/src/sell-orders/: internal-sell-orders.controller.ts  sell-orders.controller.ts  sell-orders.module.ts  sell-orders.service.ts
backend/src/services/: python-client.ts
backend/src/tokens/: internal-tokens.controller.ts  tokens.controller.ts  tokens.module.ts  tokens.service.ts
backend/src/users/: users.controller.ts  users.service.ts
frontend/: package.json  pnpm-lock.yaml
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: alert-feed.tsx  (+3 more)
(+24 files in other folders)
